	file operations.  Thanks to filterfalse.

	Fixed navigation to broken link from a menu.

	Fixed group completion for :chown command.

	Fixed cursor positioning in custom view with identically named files on
	local filter updates.

	Fixed restoring selection in custom view in presence of identically named
	files.  Thanks to filterfalse.

	Fixed navigation to file in custom view in presernce of identically named
	files there.  Thanks to filterfalse.

	Fixed remapping of builtin keys that are followed by selectors (e.g.
	`:nnoremap d y`).  Thanks to mvucBmM0.

0.8-beta to 0.8

	Added handling of Ctrl-L to sort dialog.  Thanks to filterfalse.

	Added device id (major and minor numbers) to file info dialog.

	Added script to update timestamps, so that build system won't be
	regenerated without real reason.  One might want to run it when building
	from git checkout, which doesn't preserve correct timestamps.

	Append unused space in view columns to the last one with percent sizing
	type if any.  Thanks to fogine.

	Drastically increased performance of custom view composing.

	Be more accurate when deciding whether view displays graphics,
	particularly rely on %px and %py, because %pw and %ph might be useful for
	text viewers as well.  Thanks to Svyatoslav Mishyn (a.k.a. juef).

	Less flicker on preview window update.

	Clean occasional graphics leftovers after disabling preview.

	Ignore file decorations ('classify') on sorting custom views.  Thanks to
	filterfalse.

	Do not invoke vifmrc-converter to update color scheme names if no color
	schemes were found.

	Display 2822 date without time zone in file info.  Thanks to Svyatoslav
	Mishyn (a.k.a. juef).

	Disallow creating user-defined command with "?" or "!" suffix if this
	would hide builtin command.  Redefining commands without suffixes is not
	allowed, thus this shouldn't be allowed too.

	Better "all" pseudo-option parsing and support of resetting it.
